--- a/.gitmodules
+++ b/.gitmodules
@@ -1,90 +1,90 @@
 [submodule "pfQuest"]
 	path = pfQuest
-	url = https://gitlab.com/shagu/pfQuest
+	url = https://github.com/shagu/pfQuest
 [submodule "pfSimpleDamage"]
 	path = pfSimpleDamage
-	url = https://gitlab.com/shagu/pfSimpleDamage
+	url = https://github.com/shagu/pfSimpleDamage
 [submodule "pfStudio"]
 	path = pfStudio
-	url = https://gitlab.com/shagu/pfStudio
+	url = https://github.com/shagu/pfStudio
 [submodule "pfUI"]
 	path = pfUI
-	url = https://gitlab.com/shagu/pfUI
+	url = https://github.com/shagu/pfUI
 [submodule "pfUI-eliteoverlay"]
 	path = pfUI-eliteoverlay
-	url = https://gitlab.com/shagu/pfUI-eliteoverlay
+	url = https://github.com/shagu/pfUI-eliteoverlay
 [submodule "pfUI-fonts"]
 	path = pfUI-fonts
-	url = https://gitlab.com/shagu/pfUI-fonts
+	url = https://github.com/shagu/pfUI-fonts
 [submodule "ShaguBam"]
 	path = ShaguBam
-	url = https://gitlab.com/shagu/ShaguBam
+	url = https://github.com/shagu/ShaguBam
 [submodule "ShaguBoP"]
 	path = ShaguBoP
-	url = https://gitlab.com/shagu/ShaguBoP
+	url = https://github.com/shagu/ShaguBoP
 [submodule "ShaguChat"]
 	path = ShaguChat
-	url = https://gitlab.com/shagu/ShaguChat
+	url = https://github.com/shagu/ShaguChat
 [submodule "ShaguClock"]
 	path = ShaguClock
-	url = https://gitlab.com/shagu/ShaguClock
+	url = https://github.com/shagu/ShaguClock
 [submodule "ShaguColor"]
 	path = ShaguColor
-	url = https://gitlab.com/shagu/ShaguColor
+	url = https://github.com/shagu/ShaguColor
 [submodule "ShaguCombat"]
 	path = ShaguCombat
-	url = https://gitlab.com/shagu/ShaguCombat
+	url = https://github.com/shagu/ShaguCombat
 [submodule "ShaguCopy"]
 	path = ShaguCopy
-	url = https://gitlab.com/shagu/ShaguCopy
+	url = https://github.com/shagu/ShaguCopy
 [submodule "ShaguDelgado"]
 	path = ShaguDelgado
-	url = https://gitlab.com/shagu/ShaguDelgado
+	url = https://github.com/shagu/ShaguDelgado
 [submodule "ShaguError"]
 	path = ShaguError
-	url = https://gitlab.com/shagu/ShaguError
+	url = https://github.com/shagu/ShaguError
 [submodule "ShaguInventory"]
 	path = ShaguInventory
-	url = https://gitlab.com/shagu/ShaguInventory
+	url = https://github.com/shagu/ShaguInventory
 [submodule "ShaguKill"]
 	path = ShaguKill
-	url = https://gitlab.com/shagu/ShaguKill
+	url = https://github.com/shagu/ShaguKill
 [submodule "ShaguMount"]
 	path = ShaguMount
-	url = https://gitlab.com/shagu/ShaguMount
+	url = https://github.com/shagu/ShaguMount
 [submodule "ShaguNotify"]
 	path = ShaguNotify
-	url = https://gitlab.com/shagu/ShaguNotify
+	url = https://github.com/shagu/ShaguNotify
 [submodule "ShaguPlates"]
 	path = ShaguPlates
-	url = https://gitlab.com/shagu/ShaguPlates
+	url = https://github.com/shagu/ShaguPlates
 [submodule "ShaguPremium"]
 	path = ShaguPremium
-	url = https://gitlab.com/shagu/ShaguPremium
+	url = https://github.com/shagu/ShaguPremium
 [submodule "ShaguQuest"]
 	path = ShaguQuest
-	url = https://gitlab.com/shagu/ShaguQuest
+	url = https://github.com/shagu/ShaguQuest
 [submodule "ShaguScore"]
 	path = ShaguScore
-	url = https://gitlab.com/shagu/ShaguScore
+	url = https://github.com/shagu/ShaguScore
 [submodule "ShaguStance"]
 	path = ShaguStance
-	url = https://gitlab.com/shagu/ShaguStance
+	url = https://github.com/shagu/ShaguStance
 [submodule "ShaguTooltips"]
 	path = ShaguTooltips
-	url = https://gitlab.com/shagu/ShaguTooltips
+	url = https://github.com/shagu/ShaguTooltips
 [submodule "ShaguUI"]
 	path = ShaguUI
-	url = https://gitlab.com/shagu/ShaguUI
+	url = https://github.com/shagu/ShaguUI
 [submodule "ShaguValue"]
 	path = ShaguValue
-	url = https://gitlab.com/shagu/ShaguValue
+	url = https://github.com/shagu/ShaguValue
 [submodule "pfDebug"]
 	path = pfDebug
-	url = https://gitlab.com/shagu/pfDebug
+	url = https://github.com/shagu/pfDebug
 [submodule "GMBlacklist"]
 	path = GMBlacklist
-	url = https://gitlab.com/shagu/GMBlacklist
+	url = https://github.com/shagu/GMBlacklist
 [submodule "pfUI-darkmod"]
 	path = pfUI-darkmod
-	url = https://gitlab.com/shagu/pfUI-darkmod.git/
+	url = https://github.com/shagu/pfUI-darkmod.git/
